CI/CD/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"spring-boot-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"spring-boot-app\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  resourceVersion: '252492'
  name: spring-boot-app
  uid: 6a3e076a-ca1d-47b8-b0bb-9f1d6ac0d8d9
  creationTimestamp: '2024-09-30T19:03:48Z'
  generation: 2
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: apps/v1
      time: '2024-09-30T19:03:48Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"spring-boot-app"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-09-30T19:03:49Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-09-30T19:03:49Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"spring-boot-app"}':
                  'f:image': {}
  namespace: demonstration
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-boot-app
  template:
    metadata:
      labels:
        deployment: spring-boot-app
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: spring-boot-app
          image: 'quay.io/rh_ee_tavelino/spring-boot-app@sha256:bb22ab758cfe99add0d0af00ebff745c33af1cb0770e70e5071459c7683519e7'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-09-30T19:03:49Z'
      lastTransitionTime: '2024-09-30T19:03:49Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-09-30T19:03:49Z'
      lastTransitionTime: '2024-09-30T19:03:48Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "spring-boot-app-dbfdfd8bb" has successfully progressed.
