CI/CD/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-app
  namespace: demonstration
  uid: b655b8f0-6f7c-46ec-a6cf-3b8647446411
  resourceVersion: '252448'
  creationTimestamp: '2024-09-30T19:03:48Z'
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2024-09-30T19:03:48Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.232.222
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.232.222
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: spring-boot-app
status:
  loadBalancer: {}
