CI/CD/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-boot-app
  namespace: demonstration
  uid: 2b50e03d-ba56-4b34-8376-4d7d6966a7b9
  resourceVersion: '257284'
  creationTimestamp: '2024-09-30T19:11:24Z'
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-09-30T19:11:24Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: spring-boot-app-demonstration.apps.cluster-pfkrw.pfkrw.sandbox1043.opentlc.com
  to:
    kind: Service
    name: spring-boot-app
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: spring-boot-app-demonstration.apps.cluster-pfkrw.pfkrw.sandbox1043.opentlc.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-09-30T19:11:24Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster-pfkrw.pfkrw.sandbox1043.opentlc.com
